<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.example.camera.presentation.dash.settings.SettingsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_resolution"
            style="@style/TextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_image_resolution"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_resolution"
            style="@style/ValueComponentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_resolution" />

        <TextView
            android:id="@+id/txt_detections"
            style="@style/TextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_max_detections"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_resolution" />

        <Spinner
            android:id="@+id/spinner_detections"
            style="@style/ValueComponentStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/txt_detections" />

        <TextView
            android:id="@+id/txt_confidence"
            style="@style/TextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_confidence_threshold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_detections" />

        <SeekBar
            android:id="@+id/slider_confidence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_half"
            android:layout_marginEnd="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_confidence" />

        <TextView
            android:id="@+id/txt_inference_type"
            style="@style/TextLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_inference_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider_confidence" />

        <TextView
            android:id="@+id/txt_inference_local"
            style="@style/SwitchButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="8dp"
            android:text="@string/setup_inference_local"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/txt_inference_remote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_inference_type" />

        <TextView
            android:id="@+id/txt_inference_remote"
            style="@style/SwitchButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="@dimen/margin_default"
            android:text="@string/setup_inference_remote"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_inference_local"
            app:layout_constraintTop_toTopOf="@id/txt_inference_local" />

        <EditText
            android:id="@+id/edit_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:digits="0,1,2,3,4,5,6,7,8,9,."
            android:hint="@string/setup_server_address"
            android:importantForAutofill="no"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@id/edit_port"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_inference_remote" />

        <EditText
            android:id="@+id/edit_port"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_default"
            android:hint="@string/setup_server_port"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_ip_address"
            app:layout_constraintTop_toTopOf="@id/edit_ip_address" />

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_ip_address" />

        <TextView
            android:id="@+id/btn_cancel"
            android:text="@string/cancel"
            style="@style/SecondaryButtonStyle"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom" />

        <TextView
            android:id="@+id/btn_save"
            style="@style/SecondaryButtonStyle"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
