<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.example.camera.presentation.setup.SetupViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/traffic">

        <TextView
            android:id="@+id/txt_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:fontFamily="@font/comfortaa"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:transitionName="@string/transition_name_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="@dimen/margin_default"
            app:cardBackgroundColor="#71FFFFFF"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_half"
                app:layout_constraintTop_toBottomOf="@id/txt_logo">

                <TextView
                    android:id="@+id/txt_resolution"
                    style="@style/TextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_image_resolution"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_resolution"
                    style="@style/ValueComponentStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:items="@{vm.resolutions}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/txt_resolution"
                    app:onItemSelected="@{(position) -> vm.onResolutionSelected(position)}" />

                <TextView
                    android:id="@+id/txt_detections"
                    style="@style/TextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_max_detections"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_resolution" />

                <SeekBar
                    android:id="@+id/slider_detections_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_detections" />

                <TextView
                    android:id="@+id/txt_confidence"
                    style="@style/TextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_confidence_threshold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/slider_detections_count" />

                <SeekBar
                    android:id="@+id/slider_confidence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_confidence" />

                <TextView
                    android:id="@+id/txt_inference_type"
                    style="@style/TextLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_inference_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/slider_confidence" />

                <TextView
                    android:id="@+id/txt_inference_local"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_half"
                    android:layout_marginEnd="8dp"
                    android:text="@string/setup_inference_local"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@id/txt_inference_remote"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_inference_type" />

                <TextView
                    android:id="@+id/txt_inference_remote"
                    style="@style/SwitchButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/setup_inference_remote"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_inference_local"
                    app:layout_constraintTop_toTopOf="@id/txt_inference_local" />

                <EditText
                    android:id="@+id/edit_ip_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_default"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:digits="0,1,2,3,4,5,6,7,8,9,."
                    android:hint="@string/setup_server_address"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="15"
                    app:layout_constraintEnd_toStartOf="@id/edit_port"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt_inference_remote" />

                <EditText
                    android:id="@+id/edit_port"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/setup_server_port"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/edit_ip_address"
                    app:layout_constraintTop_toTopOf="@id/edit_ip_address" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_proceed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:onClick="@{() -> vm.onProceedClick()}"
            android:text="@string/dash_start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
